# luasocket

./: .editorconfig  .gitignore  .luacheckrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  FIX  LICENSE  Lua.props  Lua51.props  Lua52.props  NEW  README  TODO  WISH  build-mingw.sh  config  linux.cmd  ltn012.wiki  ltn013.wiki  luasocket-2.1-1.rockspec  luasocket-3.0-1.rockspec  luasocket-scm-0.rockspec  luasocket-scm-3.rockspec  luasocket.sln  luasocket.vcproj  macosx.cmd  makefile  makefile.dist  mime.vcproj  mime.vcxproj  mime.vcxproj.filters  socket.vcproj  socket.vcxproj  socket.vcxproj.filters  unix.vcxproj  win32.cmd
.github/workflows/: build.yml  luacheck.yml  windows.yml
ci/lua/: CMakeLists.txt
doc/: callback.html  code.html  dns.html  ftp.html  http.html  index.html  installation.html  introduction.html  ltn12.html  mime.html  reference.css  reference.html  smtp.html  socket.html  stream.html  tcp.html  udp.html  url.html
docs/: ftp.html  http.html  index.html  installation.html  introduction.html  ltn12.html  mime.html  smtp.html  socket.html  tcp.html  udp.html  url.html
etc/: README  b64.lua  check-links-nb.lua  check-links.lua  check-memory.lua  dict.lua  dispatch.lua  eol.lua  forward.lua  get.lua  lp.lua  qp.lua  tftp.lua
gem/: TODO  gem.c  ltn012.tex  makefile
rockspec/: luasocket-3.0rc2-1.rockspec  luasocket-scm-2.rockspec
rockspecs/: luasocket-3.0.0-1.rockspec  luasocket-scm-0.rockspec
samples/: README  cddb.lua  daytimeclnt.lua  echoclnt.lua  echosrvr.lua  forward.lua  listener.lua  lpr.lua  talker.lua  tinyirc.lua
src/: auxiliar.c  auxiliar.h  buffer.c  buffer.h  common.h  compat.c  compat.h  config.h  except.c  except.h  except.lua  ftp.lua  getaddrinfo.c  getaddrinfo.h  headers.lua  http.lua  if.c  if.h  inet.c  inet.h  io.c  io.h  ltn12.lua  lua_typeerror.c  lua_typeerror.h  luasocket.c  luasocket.h  makefile  mbox.lua  mime.c  mime.h  mime.lua  netdb-compat.c  netdb-compat.h  options.c  options.h  pierror.h  psp-un.h  select.c  select.h  (+27 more)
test/: README  dicttest.lua  excepttest.lua  ftptest.lua  hello.lua  httptest.lua  ifacetest.lua  ipv6mcasttest.lua  ltn12test.lua  mimetest.lua  smtptest.lua  stufftest.lua  tcp-getoptions  test_acceptfd.lua  test_setfd.lua  test_socket_error.lua  testclnt.lua  testmesg.lua  testsrvr.lua  testsupport.lua  tftptest.lua  udp-zero-length-send-recv  udpconnectclnt.lua  unixclnt.lua  unixsrvr.lua  unixtcpclnt.lua  unixtcpsrvr.lua  unixtest.lua  unixudpclnt.lua  unixudpsrvr.lua  urltest.lua  utestclnt.lua  utestsrvr.lua
test/auth/: .htaccess  .htpasswd
